@@ -15,6 +15,7 @@ import java.math.BigDecimal;
 import java.math.RoundingMode;
 import java.time.LocalDateTime;
 import java.util.*;
+import java.util.stream.Collectors;
 
 @Service
 public class PizzaService {
@@ -22,27 +23,37 @@ public class PizzaService {
     private final PizzaRepository pizzaRepository;
     private final ContainRepository containRepository;
     private final OrderLineRepository orderLineRepository;
-    private final SizeRepository sizeRepository;
     private final PriceRepository priceRepository;
 
     private final PriceService priceService;
+    private final SizeService sizeService;
     private final IngredientService ingredientService;
 
-    public PizzaService(PizzaRepository pizzaRepository, ContainRepository containRepository, OrderLineRepository orderLineRepository, SizeRepository sizeRepository, PriceService priceService, IngredientRepository ingredientRepository, PriceRepository priceRepository, IngredientService ingredientService) {
+    public PizzaService(PizzaRepository pizzaRepository, ContainRepository containRepository,
+                        OrderLineRepository orderLineRepository, PriceService priceService,
+                        PriceRepository priceRepository, SizeService sizeService,
+                        IngredientService ingredientService) {
         this.pizzaRepository = pizzaRepository;
         this.containRepository = containRepository;
         this.orderLineRepository = orderLineRepository;
-        this.sizeRepository = sizeRepository;
         this.priceRepository = priceRepository;
         this.priceService = priceService;
+        this.sizeService = sizeService;
         this.ingredientService = ingredientService;
     }
 
     public List<PizzaDTO> getAllPizzasDTOAvailable() {
         List<Pizza> pizzas = pizzaRepository.findByAvailableTrueOrderByNamePizzaAsc();
-        return pizzas.stream().map(pizza -> {
-            return getPizzaDTO(pizza.getIdPizza());
-        }).toList();
+        return pizzas.stream()
+                .map(pizza -> getPizzaDTO(pizza.getIdPizza()))
+                .collect(Collectors.toList());
+    }
+
+    public List<PizzaDTO> getAllPizzasDTO(){
+        List<Pizza> pizzas = pizzaRepository.findAllByOrderByAvailableDescNamePizzaAsc();
+        return pizzas.stream()
+                .map(pizza -> getPizzaDTO(pizza.getIdPizza()))
+                .collect(Collectors.toList());
     }
 
     public Pizza getPizza(Object object) {
@@ -55,6 +66,18 @@ public class PizzaService {
             throw new IllegalArgumentException("Type d'identifiant non supporté pour la pizza : " + object);
         }
         return pizzaOpt.orElse(null);
+    }
+
+    public PizzaDTO getPizzaDTOAvailable(Object object) {
+        PizzaDTO pizzaDTO = getPizzaDTO(object);
+        if(pizzaDTO != null) {
+            if(pizzaDTO.isAvailable()) {
+                return pizzaDTO;
+            } else {
+                throw new PizzaAndIngredientException(ErrorMessages.PIZZA_UNAVAILABLE + " : " + pizzaDTO.getNamePizza());
+            }
+        }
+        return null;
     }
 
     public PizzaDTO getPizzaDTO(Object object) {
@@ -71,19 +94,19 @@ public class PizzaService {
     @Transactional
     public void addPizza(NewPizzaDTO newPizzaDTO) {
         Pizza newPizza = PizzaMapper.toEntity(newPizzaDTO);
-        Pizza pizza = this.getPizza(newPizza.getNamePizza());
 
-        // Vérification si le nom de pizza existe déjà
-        if (getPizza(pizza.getNamePizza()) != null) {
-            if(!pizza.isAvailable()){
+        Pizza existingPizza = this.getPizza(newPizza.getNamePizza());
+        if (existingPizza != null) {
+            if (!existingPizza.isAvailable()) {
                 throw new PizzaAndIngredientException(ErrorMessages.PIZZA_UNAVAILABLE + " : " + newPizzaDTO.getNamePizza());
+            } else {
+                throw new PizzaAndIngredientException(ErrorMessages.PIZZA_ALREADY_EXISTS + " : " + newPizzaDTO.getNamePizza());
             }
-        } else {
-            throw new PizzaAndIngredientException(ErrorMessages.PIZZA_ALREADY_EXISTS + " : " + newPizzaDTO.getNamePizza());
         }
 
         savePizzaWithIngredientsAndPrice(newPizza, newPizzaDTO.getIngredients(), newPizzaDTO.getPricePizza());
     }
+
 
     @Transactional
     public void updatePizza(UpdatedPizzaDTO updatedPizzaDTO) {
@@ -91,20 +114,18 @@ public class PizzaService {
         if (pizza == null) {
             throw new PizzaAndIngredientException(ErrorMessages.PIZZA_NOT_FOUND);
         }
-
+        Long idPizza = pizza.getIdPizza();
         // Vérifie qu'aucune autre pizza n'a déjà ce nom
         Optional<Pizza> otherPizzaWithSameName = pizzaRepository.findByNamePizza(updatedPizzaDTO.getNamePizza())
                 .stream()
-                .filter(p -> !p.getIdPizza().equals(pizza.getIdPizza()))
+                .filter(p -> !p.getIdPizza().equals(idPizza))
                 .findAny();
 
         if (otherPizzaWithSameName.isPresent()) {
             throw new PizzaAndIngredientException(ErrorMessages.PIZZA_ALREADY_EXISTS + " : " + updatedPizzaDTO.getNamePizza());
         }
 
-        pizza.setNamePizza(updatedPizzaDTO.getNamePizza());
-        pizza.setImage(updatedPizzaDTO.getImage());
-        pizza.setAvailable(updatedPizzaDTO.isAvailable());
+        pizza = PizzaMapper.toEntity(updatedPizzaDTO);
 
         savePizzaWithIngredientsAndPrice(pizza, updatedPizzaDTO.getIngredients(), updatedPizzaDTO.getPricePizza());
     }
@@ -114,71 +135,87 @@ public class PizzaService {
         Price pricePizza = this.priceRepository.findTopByPizzaAndValidFromLessThanEqualOrderByValidFromDesc(pizza, localDateTime)
                 .orElse(null);
         if(pricePizza != null) {
-            List<Size> sizes = sizeRepository.findAll();
+            List<Size> sizes = sizeService.getAllSizes();
             Map<String, BigDecimal> map = new HashMap<>();
             for (Size size : sizes) {
-                map.put(size.getNameSize(), pricePizza.getValue().multiply(BigDecimal.valueOf(size.getCoeff())).setScale(2, RoundingMode.HALF_UP));
+                map.put(size.getNameSize(),
+                        pricePizza.getValue().multiply(BigDecimal.valueOf(size.getCoeff()))
+                                .setScale(2, RoundingMode.HALF_UP));
             }
+            // tri par clé (nom de taille)
+            map = map.entrySet().stream()
+                    .sorted(Map.Entry.comparingByKey())
+                    .collect(Collectors.toMap(
+                            Map.Entry::getKey,
+                            Map.Entry::getValue,
+                            (e1, e2) -> e1,
+                            LinkedHashMap::new
+                    ));
             return map;
         } else {
-            PizzaAndIngredientException exception = new
-            PizzaAndIngredientException(ErrorMessages.PRICE_NOT_FOUND + " : " + pizza.getNamePizza() + " à la date " + localDateTime.toString());
-            System.err.println(exception.getMessage());
-            throw exception;
-
+            throw new PizzaAndIngredientException(
+                    ErrorMessages.PRICE_NOT_FOUND + " : " + pizza.getNamePizza() + " à la date " + localDateTime.toString()
+            );
         }
-
     }
 
-    // recuperer les ingredients d'une pizza
     private List<String> getIngredientsFromPizza(Object idPizza){
         Pizza pizza = this.getPizza(idPizza);
         if (pizza != null) {
-            return containRepository.findByPizzaIdPizza(pizza.getIdPizza())
+            List<String> retour = containRepository.findByPizzaIdPizza(pizza.getIdPizza())
                     .stream()
                     .map(contain -> contain.getIngredient().getNameIngredient())
-                    .toList();
+                    .collect(Collectors.toList());
+            retour.sort(String::compareTo);
+            return retour;
         }
         return null;
     }
 
-    private void savePizzaWithIngredientsAndPrice(Pizza pizza, List<String> ingredientsNames, BigDecimal price) {
+
+    @Transactional
+    public void savePizzaWithIngredientsAndPrice(Pizza pizza, List<String> ingredientsNames, BigDecimal price) {
         ingredientsNames.sort(String::compareTo);
+
+        // Supprimer les Contain existants pour éviter les conflits de clé composite
+        if (pizza.getIdPizza() != null) {
+            containRepository.deleteByPizza(pizza); // DELETE direct en base
+            containRepository.flush();              // flush immédiat pour que Hibernate exécute le DELETE
+        }
+
+        // Créer les nouvelles Contain
+        List<Contain> newContains = new ArrayList<>();
+        for (String ingredientName : ingredientsNames) {
+            Ingredient ingredient = ingredientService.getIngredient(ingredientName);
+            if (ingredient == null) {
+                throw new PizzaAndIngredientException(ErrorMessages.INGREDIENT_NOT_FOUND + " : " + ingredientName);
+            }
+            Contain contain = new Contain();
+            contain.setPizza(pizza);
+            contain.setIngredient(ingredient);
+            newContains.add(contain);
+        }
+
+        // Ajouter à la collection existante
         if (pizza.getContains() == null) {
             pizza.setContains(new ArrayList<>());
         }
         pizza.getContains().clear();
+        pizza.getContains().addAll(newContains);
 
-        List<Contain> contains = new ArrayList<>();
-        for (String ingredientName : ingredientsNames) {
-            Ingredient ingredient = ingredientService.getIngredient(ingredientName);
-            if (ingredient != null) {
-                Contain contain = new Contain();
-                contain.setPizza(pizza);
-                contain.setIngredient(ingredient);
-                contains.add(contain);
-            } else {
-                throw new PizzaAndIngredientException(ErrorMessages.INGREDIENT_NOT_FOUND + " : " + ingredientName);
-            }
-        }
-        pizza.getContains().addAll(contains);
-
+        // Sauvegarder la pizza et son prix
         pizzaRepository.save(pizza);
-        // Sauvegarde du prix
         priceService.savePriceOfPizza(pizza, price);
     }
 
-
-
     public Pizza getBestSellingPizza() {
         List<OrderLine> orderLines = orderLineRepository.findAll();
-        // on recupere la pizza la plus vendue, cad, celle qui a le plus d'occurrences dans les lignes de commande
         return orderLines.stream()
-                .collect(java.util.stream.Collectors.groupingBy(OrderLine::getPizza, java.util.stream.Collectors.summingInt(OrderLine::getQuantity)))
+                .collect(Collectors.groupingBy(OrderLine::getPizza, Collectors.summingInt(OrderLine::getQuantity)))
                 .entrySet()
                 .stream()
-                .max(java.util.Map.Entry.comparingByValue())
-                .map(java.util.Map.Entry::getKey)
+                .max(Map.Entry.comparingByValue())
+                .map(Map.Entry::getKey)
                 .orElse(null);
     }
 }
